--- a/index.html
+++ b/index.html
@@ -54,14 +54,17 @@
                 <a href="https://github.com/robinhwhwk/spotify-recommendation" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
                   </a>
-                <a href="https://demo.spotify-recommendation.com" class="btn btn-demo" target="_blank" rel="noopener noreferrer">
+                <a href="www.jpopify.com" class="btn btn-demo" target="_blank" rel="noopener noreferrer">
                     View Demo</a>
             </div> <!-- project -->
                 
             <div class="project">
                 <h3>Cryptocurrency Sentiment Analysis</h3>
                 <p>
-                    Lorem ea sit excepteur pariatur commodo consequat et laboris voluptate. Minim sint commodo ex tempor ut et dolor incididunt. Labore occaecat est quis laboris do commodo mollit. Reprehenderit et tempor excepteur culpa culpa nulla veniam et et nisi ullamco nisi exercitation. Incididunt officia aliquip labore velit. Pariatur est adipisicing consequat duis voluptate consectetur reprehenderit sit irure tempor eiusmod.
+                    Web application that allows users to track the public sentiment towards a specific cryptocurrency. 
+                    The application uses the Twitter API to gather tweets containing mentions of the cryptocurrency, 
+                    and then utilizes natural language processing techniques to analyze the sentiment of the tweets. 
+                    The application displays a score representing the overall sentiment of the tweets, as well as a chart showing the trend of the sentiment over time.
                 </p>
                 <a href="https://github.com/robinhwhwk/crypto_analysis" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
@@ -71,11 +74,15 @@
             <div class="project">
                 <h3>Naniro - Color Guessing Game</h3>
                 <p>
-                    Ut officia anim culpa pariatur ut magna. Irure officia amet eu duis velit commodo do enim. Incididunt do laborum commodo ad irure occaecat est et eiusmod. Cupidatat aliqua in reprehenderit reprehenderit duis amet irure esse nisi nisi. Laboris ullamco veniam consequat exercitation ea labore tempor culpa exercitation nisi officia.
+                    Web game that challenges players to guess the hex code for the color shown in the background. 
+                    The game displays a random color in the background, and the player must type in the corresponding hex code 
+                    within 6 tries to complete the puzzle.
                 </p>
                 <a href="https://github.com/robinhwhwk/naniro" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
                   </a>
+                  <a href="https://robinhwhwk.github.io/naniro/" class="btn btn-demo" target="_blank" rel="noopener noreferrer">
+                    View Demo</a>
             </div> <!-- project -->
         </div> 
     </section>
