--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="https://github.com/robinhwhwk/spotify-recommendation" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
                   </a>
-                <a href="www.jpopify.com" class="btn btn-demo" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.jpopify.com" class="btn btn-demo" target="_blank" rel="noopener noreferrer">
                     View Demo</a>
             </div> <!-- project -->
                 
